Fix alignment on small screens

--- a/src/FaceImage.css
+++ b/src/FaceImage.css
@@ -1,6 +1,5 @@
 .container {
     position: relative;
-    width: 50%;
     margin-left: auto;
     margin-right: auto;
 }
